@@ -227,7 +227,6 @@ public class TransactionalRegion extends HRegion {
     }
     LOG.debug("Begining transaction " + key + " in region "
         + super.getRegionInfo().getRegionNameAsString());
-    this.hlog.writeStartToLog(super.getRegionInfo(), transactionId);
 
     maybeTriggerOldTransactionFlush();
   }
@@ -449,7 +448,9 @@ public class TransactionalRegion extends HRegion {
 
     state.setStatus(Status.ABORTED);
 
-    this.hlog.writeAbortToLog(super.getRegionInfo(), state.getTransactionId());
+    if (state.hasWrite()) {
+      this.hlog.writeAbortToLog(super.getRegionInfo(), state.getTransactionId());
+    }
 
     // Following removes needed if we have voted
     if (state.getSequenceNumber() != null) {
@@ -475,9 +476,11 @@ public class TransactionalRegion extends HRegion {
       this.delete(delete, null, true);
     }
     
-    // Now the transaction lives in the WAL, we can writa a commit to the log 
+    // Now the transaction lives in the WAL, we can write a commit to the log 
     // so we don't have to recover it.
-    this.hlog.writeCommitToLog(super.getRegionInfo(), state.getTransactionId());
+    if (state.hasWrite()) {
+      this.hlog.writeCommitToLog(super.getRegionInfo(), state.getTransactionId());
+    }
 
     state.setStatus(Status.COMMITED);
     if (state.hasWrite()
