@@ -60,6 +60,7 @@ Release 0.20.1 - Unreleased
    HBASE-1874  Client Scanner mechanism that is used for HbaseAdmin methods
                (listTables, tableExists), is very slow if the client is far
                away from the HBase cluster (Andrei Dragomir via Stack)
+   HBASE-1879  ReadOnly transactions generate WAL activity (Clint Morgan via Stack)
 
 Release 0.20.0 - Tue Sep  8 12:48:41 PDT 2009
 
